반응형 웹 적용
반응형 웹 적용

--- a/no-style/src/components/Auth/style.css
+++ b/no-style/src/components/Auth/style.css
@@ -1,4 +1,4 @@
-.App {
+ .App {
    font-family: sans-serif;
    text-align: center;
  }
@@ -22,7 +22,7 @@
    width: 100vw;
 
  }
- 
+ /*
  h1 {
    font-weight: bold;
    margin: 0;
@@ -258,4 +258,4 @@
    color: #3c97bf;
    text-decoration: none;
  }
- 
+  */
